--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -50,7 +50,7 @@
                     </LinearLayout>
 
                     <TextView
-                        style="@style/tv_white_24_text_style"
+                        style="@style/tv_white_20_text_style"
                         android:layout_marginTop="@dimen/d16"
                         android:text="@string/transaction_records" />
                 </LinearLayout>
@@ -58,7 +58,7 @@
                 <LinearLayout
                     android:layout_width="@dimen/d0"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/d24"
+                    android:layout_marginStart="@dimen/d34"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -135,7 +135,7 @@
                     </LinearLayout>
 
                     <TextView
-                        style="@style/tv_white_24_text_style"
+                        style="@style/tv_white_20_text_style"
                         android:layout_marginTop="@dimen/d16"
                         android:text="@string/receive_account" />
                 </LinearLayout>
