--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bcaas="http://schemas.android.com/apk/res-auto"
     android:id="@+id/block_base_content"
@@ -16,160 +15,237 @@
 
     <LinearLayout
         style="@style/tv_layout_bg"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <include layout="@layout/tv_include_header" />
 
         <LinearLayout
-            android:id="@+id/ll_import_wallet"
-            style="@style/tv_layout_style"
-            android:layout_width="@dimen/d0"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/d0"
+            android:layout_marginBottom="@dimen/d20"
+            android:layout_marginTop="@dimen/d20"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="@dimen/d12">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_title"
-                style="@style/tv_white_16_text_style"
-                android:layout_marginTop="@dimen/d20"
-                android:text="@string/private_key" />
 
-            <EditText
-                android:id="@+id/et_private_key"
-                style="@style/tv_white_16_text_style"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/d16"
-                android:clickable="true"
-                android:digits="@string/private_format"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:hint="@string/enter_private_key"
-                android:inputType="textMultiLine"
-                android:lineSpacingExtra="@dimen/d3"
-                android:maxLength="51"
-                android:maxLines="2"
-                android:textColorHint="@color/white" />
+            <RelativeLayout
+                android:id="@+id/rl_unlock_wallet"
+                style="@style/tv_layout_style"
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/d10"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="@dimen/d12">
 
-            <io.bcaas.view.edittext.PasswordEditText
-                android:id="@+id/pketPwd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/d20"
+                <TextView
 
-                bcaas:hint="@string/password_rule_of_length"
-                bcaas:hintColor="@color/white70"
-                bcaas:textColor="@color/white"
-                bcaas:title="@string/set_password_for_your_wallet" />
+                    style="@style/tv_white_16_text_style"
+                    android:layout_above="@+id/et_unlock_pwd"
+                    android:layout_centerVertical="true"
+                    android:text="@string/password" />
 
-            <io.bcaas.view.edittext.PasswordEditText
-                android:id="@+id/pketConfirmPwd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                bcaas:hint="@string/please_enter_password_again"
-                bcaas:hintColor="@color/white70"
-                bcaas:showLine="false"
-                bcaas:showTitle="false"
-                bcaas:textColor="@color/white" />
+                <EditText
+                    android:id="@+id/et_unlock_pwd"
+                    style="@style/tv_white_15_text_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="@dimen/d16"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:hint="@string/enter_password"
+                    android:textColor="@color/white_f1f1f1"
+                    android:textColorHint="@color/white70_f1f1f1" />
 
-            <TextView
-                android:id="@+id/tv_password_rule"
-                style="@style/red_14_text_style"
-                android:layout_margin="@dimen/d12"
-                android:text="@string/remember_password" />
+                <Button
+                    android:id="@+id/btn_unlock_wallet"
+                    style="@style/tv_button_style"
+                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/d18"
+                    android:layout_marginTop="@dimen/d18"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center"
+                    android:text="@string/unlock" />
+            </RelativeLayout>
 
-            <Button
-                android:id="@+id/btn_import_wallet"
-                style="@style/tv_button_style"
-                android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/d18"
-                android:clickable="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:text="@string/confirm" />
+            <RelativeLayout
+                android:id="@+id/rl_create_wallet"
+                style="@style/tv_layout_style"
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:padding="@dimen/d12">
+
+                <LinearLayout
+                    android:id="@+id/ll_create_set_pwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <io.bcaas.view.edittext.TVPasswordEditText
+                        android:id="@+id/pket_create_pwd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/d20"
+                        bcaas:hint="@string/password_rule_of_length"
+                        bcaas:hintColor="@color/white70_f1f1f1"
+                        bcaas:textColor="@color/white_f1f1f1"
+                        bcaas:title="@string/password" />
+
+                    <io.bcaas.view.edittext.TVPasswordEditText
+                        android:id="@+id/pket_create_confirm_pwd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        bcaas:hint="@string/please_enter_password_again"
+                        bcaas:hintColor="@color/white70_f1f1f1"
+                        bcaas:textColor="@color/white_f1f1f1"
+                        bcaas:title="@string/confirm_password"/>
+                </LinearLayout>
+
+
+                <Button
+                    android:id="@+id/btn_create_wallet"
+                    style="@style/tv_button_style"
+                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/d18"
+                    android:layout_marginTop="@dimen/d18"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center"
+                    android:text="@string/create_wallet" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_import_wallet"
+                style="@style/tv_layout_style"
+                android:layout_width="@dimen/d0"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/d10"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="@dimen/d12">
+
+                <LinearLayout
+                    android:id="@+id/ll_import_set_private_key"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/tv_white_15_text_style"
+                        android:layout_marginTop="@dimen/d20"
+                        android:text="@string/private_key" />
+
+                    <EditText
+                        android:id="@+id/et_import_private_key"
+                        style="@style/tv_white_12_text_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/d16"
+                        android:clickable="true"
+                        android:digits="@string/private_format"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:hint="@string/enter_private_key"
+                        android:inputType="textMultiLine"
+                        android:lineSpacingExtra="@dimen/d3"
+                        android:maxLines="2"
+                        android:textColor="@color/white_f1f1f1"
+                        android:textColorHint="@color/white70_f1f1f1" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/ll_import_set_pwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <io.bcaas.view.edittext.TVPasswordEditText
+                        android:id="@+id/pket_import_pwd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/d20"
+                        bcaas:hint="@string/password_rule_of_length"
+                        bcaas:hintColor="@color/white70_f1f1f1"
+                        bcaas:textColor="@color/white_f1f1f1"
+                        bcaas:title="@string/set_password_for_your_wallet" />
+
+                    <io.bcaas.view.edittext.TVPasswordEditText
+                        android:id="@+id/pket_import_confirm_pwd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        bcaas:hint="@string/please_enter_password_again"
+                        bcaas:hintColor="@color/white70_f1f1f1"
+                        bcaas:showLine="false"
+                        bcaas:showTitle="false"
+                        bcaas:textColor="@color/white_f1f1f1" />
+
+                    <TextView
+                        android:id="@+id/tv_password_rule"
+                        style="@style/tv_orange_6_text_style"
+                        android:layout_margin="@dimen/d12"
+                        android:text="@string/remember_password" />
+                </LinearLayout>
+
+
+                <Button
+                    android:id="@+id/btn_import_wallet"
+                    style="@style/tv_button_style"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="@dimen/d18"
+                    android:layout_marginTop="@dimen/d18"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:text="@string/confirm" />
+            </RelativeLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/ll_unlock_wallet"
-            style="@style/tv_layout_style"
-            android:layout_width="@dimen/d0"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/d10"
-            android:layout_marginRight="@dimen/d10"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:padding="@dimen/d12">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/et_unlock_pwd"
-                style="@style/tv_white_16_text_style"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:hint="@string/enter_password"
-                android:textColorHint="@color/white" />
-
-            <Button
-                android:id="@+id/btn_unlock_wallet"
-                style="@style/tv_button_style"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/d48"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/d24"
-                android:clickable="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
+            <TextView
+                style="@style/tv_white_20_text_style"
+                android:layout_width="@dimen/d0"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/unlock" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/ll_create_wallet"
-            style="@style/tv_layout_style"
-            android:layout_width="@dimen/d0"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:padding="@dimen/d12">
-
-            <io.bcaas.view.edittext.PasswordEditText
-                android:id="@+id/pket_create_pwd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/d20"
-                bcaas:hint="@string/password_rule_of_length"
-                bcaas:hintColor="@color/white70"
-                bcaas:textColor="@color/white"
-                bcaas:title="@string/password" />
-
-            <io.bcaas.view.edittext.PasswordEditText
-                android:id="@+id/pket_create_confirm_pwd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                bcaas:hint="@string/please_enter_password_again"
-                bcaas:hintColor="@color/white70"
-                bcaas:showLine="false"
-                bcaas:showTitle="false"
-                bcaas:textColor="@color/white" />
-
-            <Button
-                android:id="@+id/btn_create_wallet"
-                style="@style/tv_button_style"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/d48"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/d24"
-                android:clickable="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
+            <TextView
+                style="@style/tv_white_20_text_style"
+                android:layout_width="@dimen/d0"
+                android:layout_marginLeft="@dimen/d10"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/create_wallet" />
+
+            <TextView
+                style="@style/tv_white_20_text_style"
+                android:layout_width="@dimen/d0"
+                android:layout_marginLeft="@dimen/d10"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/import_wallet" />
         </LinearLayout>
     </LinearLayout>
 </io.bcaas.view.tv.MainUpLayout>
