--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -129,8 +129,7 @@
                             android:clickable="true"
                             android:focusable="true"
                             android:focusableInTouchMode="true"
-                            android:text="@string/send"
-                            android:textColor="@color/red_da261f" />
+                            android:text="@string/send" />
 
                     </LinearLayout>
 
