--- a/app/src/main/res/layout/activity_set_pwd_for_import_wallet.xml
+++ b/app/src/main/res/layout/activity_set_pwd_for_import_wallet.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical">
 
         <io.bcaas.view.edittext.PasswordEditText
-            android:id="@+id/pketPwd"
+            android:id="@+id/pket_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d20"
@@ -26,7 +26,7 @@
             bcaas:title="@string/set_password_for_your_wallet" />
 
         <io.bcaas.view.edittext.PasswordEditText
-            android:id="@+id/pketConfirmPwd"
+            android:id="@+id/pket_confirm_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             bcaas:hint="@string/please_enter_password_again"
