--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="white_f1f1f1">#F1F1F1</color>
     <color name="white50_f1f1f1">#80F1F1F1</color>
     <color name="white70_f1f1f1">#b3F1F1F1</color>
+    <color name="white30_f1f1f1">#4DF1F1F1</color>
 
 
     <color name="red">#DA261F</color>
