--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -390,6 +390,14 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/text_size_16</item>
     </style>
+    e
+
+    <style name="tv_orange_6_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/orange_yellow</item>
+        <item name="android:textSize">@dimen/text_size_6</item>
+    </style>
 
     <style name="tv_white_15_text_style">
         <item name="android:layout_width">wrap_content</item>
@@ -443,10 +451,10 @@
 
     <style name="tv_button_style" parent="Base.Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/tv_bcaas_button_selector</item>
-        <item name="android:layout_height">@dimen/d48</item>
+        <item name="android:layout_height">@dimen/d40</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">@dimen/text_size_20</item>
+        <item name="android:textSize">@dimen/text_size_18</item>
         <item name="android:textColor">@color/white_f1f1f1</item>
     </style>
 
@@ -454,6 +462,19 @@
         <item name="android:textColor">@color/white70_f1f1f1</item>
         <item name="android:textSize">@dimen/text_size_14</item>
     </style>
+
+    <style name="tv_white_14_edit_text_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:cursorVisible">true</item>
+        <item name="android:inputType">textMultiLine|textImeMultiLine</item>
+        <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
+        <item name="android:layout_marginTop">@dimen/d20</item>
+        <item name="android:textSize">@dimen/text_size_15</item>
+        <item name="android:textColorHint">@color/white30_f1f1f1</item>
+        <item name="android:textColor">@color/black_1d2124</item>
+    </style>
+
 
     <!--  ********************************  TV end  ********************************  -->
 
