--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -34,31 +34,23 @@
                 android:layout_width="@dimen/d0"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginRight="@dimen/d10"
+                android:layout_marginEnd="@dimen/d10"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:padding="@dimen/d12">
 
                 <TextView
-
-                    style="@style/tv_white_16_text_style"
+                    style="@style/tv_white_15_text_style"
                     android:layout_above="@+id/et_unlock_pwd"
                     android:layout_centerVertical="true"
                     android:text="@string/password" />
 
                 <EditText
                     android:id="@+id/et_unlock_pwd"
-                    style="@style/tv_white_15_text_style"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/tv_login_edit_text_style"
                     android:layout_centerVertical="true"
-                    android:layout_marginTop="@dimen/d16"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:hint="@string/enter_password"
-                    android:textColor="@color/white_f1f1f1"
-                    android:textColorHint="@color/white70_f1f1f1" />
+                    android:digits="@string/password_rule"
+                    android:hint="@string/enter_password" />
 
                 <Button
                     android:id="@+id/btn_unlock_wallet"
@@ -66,11 +58,13 @@
                     android:layout_alignParentBottom="true"
                     android:layout_gravity="center"
                     android:layout_marginBottom="@dimen/d18"
+                    android:layout_marginLeft="@dimen/d46"
+                    android:layout_marginRight="@dimen/d46"
                     android:layout_marginTop="@dimen/d18"
-                    android:clickable="true"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:gravity="center"
+                    android:nextFocusUp="@+id/et_unlock_pwd"
                     android:text="@string/unlock" />
             </RelativeLayout>
 
@@ -89,15 +83,20 @@
                     android:id="@+id/ll_create_set_pwd"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_above="@+id/btn_create_wallet"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:visibility="visible">
 
                     <io.bcaas.view.edittext.TVPasswordEditText
                         android:id="@+id/pket_create_pwd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/d20"
+                        android:nextFocusDown="@+id/pket_create_confirm_pwd"
+                        android:nextFocusLeft="@+id/et_unlock_pwd"
                         bcaas:hint="@string/password_rule_of_length"
-                        bcaas:hintColor="@color/white70_f1f1f1"
+                        bcaas:hintColor="@color/white30_f1f1f1"
                         bcaas:textColor="@color/white_f1f1f1"
                         bcaas:title="@string/password" />
 
@@ -105,12 +104,61 @@
                         android:id="@+id/pket_create_confirm_pwd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:nextFocusLeft="@+id/btn_unlock_wallet"
                         bcaas:hint="@string/please_enter_password_again"
-                        bcaas:hintColor="@color/white70_f1f1f1"
+                        bcaas:hintColor="@color/white30_f1f1f1"
                         bcaas:textColor="@color/white_f1f1f1"
-                        bcaas:title="@string/confirm_password"/>
+                        bcaas:title="@string/confirm_password" />
                 </LinearLayout>
 
+                <ScrollView
+                    android:id="@+id/sv_create_wallet_set_pwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_above="@+id/btn_create_wallet"
+                    android:visibility="gone">
+
+                    <LinearLayout
+                        android:id="@+id/ll_create_show_wallet_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="@style/tv_white_15_text_style"
+                            android:layout_marginTop="@dimen/d10"
+                            android:text="@string/account_address" />
+
+                        <TextView
+                            android:id="@+id/tv_account_address"
+                            style="@style/tv_white30_12_text_style"
+                            android:lineSpacingExtra="@dimen/d3"
+                            android:maxHeight="@dimen/d44"
+                            android:maxLines="2" />
+
+                        <View
+                            style="@style/line_style"
+                            android:layout_marginTop="@dimen/d10" />
+
+                        <TextView
+                            style="@style/tv_white_15_text_style"
+                            android:layout_marginTop="@dimen/d16"
+                            android:text="@string/backup_private_key" />
+
+                        <TextView
+                            style="@style/tv_white30_12_text_style"
+                            android:layout_marginTop="@dimen/d16"
+                            android:text="@string/backup_private_key_detail" />
+
+                        <include
+                            layout="@layout/tv_include_edit_text_private_key"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/d20"
+                            android:layout_marginTop="@dimen/d10" />
+                    </LinearLayout>
+                </ScrollView>
 
                 <Button
                     android:id="@+id/btn_create_wallet"
@@ -118,6 +166,8 @@
                     android:layout_alignParentBottom="true"
                     android:layout_gravity="center"
                     android:layout_marginBottom="@dimen/d18"
+                    android:layout_marginLeft="@dimen/d46"
+                    android:layout_marginRight="@dimen/d46"
                     android:layout_marginTop="@dimen/d18"
                     android:clickable="true"
                     android:focusable="true"
@@ -132,9 +182,8 @@
                 android:layout_width="@dimen/d0"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/d10"
+                android:layout_marginStart="@dimen/d10"
                 android:layout_weight="1"
-                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/d12">
 
@@ -144,74 +193,72 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:gravity="center_vertical"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="visible">
 
                     <TextView
                         style="@style/tv_white_15_text_style"
-                        android:layout_marginTop="@dimen/d20"
                         android:text="@string/private_key" />
 
                     <EditText
                         android:id="@+id/et_import_private_key"
-                        style="@style/tv_white_12_text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/d16"
-                        android:clickable="true"
+                        style="@style/tv_login_edit_text_style"
                         android:digits="@string/private_format"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
                         android:hint="@string/enter_private_key"
                         android:inputType="textMultiLine"
-                        android:lineSpacingExtra="@dimen/d3"
-                        android:maxLines="2"
-                        android:textColor="@color/white_f1f1f1"
-                        android:textColorHint="@color/white70_f1f1f1" />
+                        android:maxLines="2" />
                 </LinearLayout>
 
-
-                <LinearLayout
-                    android:id="@+id/ll_import_set_pwd"
+                <ScrollView
+                    android:id="@+id/sv_import_wallet_set_pwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical"
+                    android:layout_above="@+id/btn_import_wallet"
                     android:visibility="gone">
 
-                    <io.bcaas.view.edittext.TVPasswordEditText
-                        android:id="@+id/pket_import_pwd"
+                    <LinearLayout
+                        android:id="@+id/ll_import_set_pwd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/d20"
-                        bcaas:hint="@string/password_rule_of_length"
-                        bcaas:hintColor="@color/white70_f1f1f1"
-                        bcaas:textColor="@color/white_f1f1f1"
-                        bcaas:title="@string/set_password_for_your_wallet" />
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
 
-                    <io.bcaas.view.edittext.TVPasswordEditText
-                        android:id="@+id/pket_import_confirm_pwd"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        bcaas:hint="@string/please_enter_password_again"
-                        bcaas:hintColor="@color/white70_f1f1f1"
-                        bcaas:showLine="false"
-                        bcaas:showTitle="false"
-                        bcaas:textColor="@color/white_f1f1f1" />
+                        <io.bcaas.view.edittext.TVPasswordEditText
+                            android:id="@+id/pket_import_pwd"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/d20"
+                            bcaas:hint="@string/password_rule_of_length"
+                            bcaas:hintColor="@color/white30_f1f1f1"
+                            bcaas:textColor="@color/white_f1f1f1"
+                            bcaas:title="@string/set_password_for_your_wallet" />
 
-                    <TextView
-                        android:id="@+id/tv_password_rule"
-                        style="@style/tv_orange_6_text_style"
-                        android:layout_margin="@dimen/d12"
-                        android:text="@string/remember_password" />
-                </LinearLayout>
+                        <io.bcaas.view.edittext.TVPasswordEditText
+                            android:id="@+id/pket_import_confirm_pwd"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            bcaas:hint="@string/please_enter_password_again"
+                            bcaas:hintColor="@color/white30_f1f1f1"
+                            bcaas:showLine="false"
+                            bcaas:textColor="@color/white_f1f1f1"
+                            bcaas:title="@string/confirm_password" />
 
+                        <TextView
+                            android:id="@+id/tv_password_rule"
+                            style="@style/tv_orange_9_text_style"
+                            android:text="@string/remember_password" />
+                    </LinearLayout>
+
+                </ScrollView>
 
                 <Button
                     android:id="@+id/btn_import_wallet"
                     style="@style/tv_button_style"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="@dimen/d18"
-                    android:layout_marginTop="@dimen/d18"
+                    android:layout_marginLeft="@dimen/d46"
+                    android:layout_marginRight="@dimen/d46"
+                    android:layout_marginTop="@dimen/d20"
                     android:clickable="true"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
@@ -234,7 +281,7 @@
             <TextView
                 style="@style/tv_white_20_text_style"
                 android:layout_width="@dimen/d0"
-                android:layout_marginLeft="@dimen/d10"
+                android:layout_marginStart="@dimen/d10"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/create_wallet" />
@@ -242,7 +289,7 @@
             <TextView
                 style="@style/tv_white_20_text_style"
                 android:layout_width="@dimen/d0"
-                android:layout_marginLeft="@dimen/d10"
+                android:layout_marginStart="@dimen/d10"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/import_wallet" />
