--- a/app/src/main/res/layout-land/activity_brand.xml
+++ b/app/src/main/res/layout-land/activity_brand.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@color/black80_1d2124"
+    android:background="@color/tv_black_101010"
     android:fitsSystemWindows="true"
     android:gravity="center"
     android:orientation="vertical">
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:scaleType="fitCenter"
-        android:src="@mipmap/icon_bcaas" />
+        android:src="@drawable/tv_icon_logo_big" />
+
 
 </LinearLayout>
