--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -10,7 +10,7 @@
         android:id="@+id/block_base_mainup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@mipmap/tv_block_select"
+        android:background="@drawable/tv_selector"
         android:visibility="gone" />
 
     <LinearLayout
@@ -39,24 +39,24 @@
                 android:orientation="vertical"
                 android:padding="@dimen/d12">
 
-                <TextView
-                    style="@style/tv_white_15_text_style"
-                    android:layout_above="@+id/et_unlock_pwd"
-                    android:layout_centerVertical="true"
-                    android:text="@string/password" />
-
-                <EditText
+                <io.bcaas.view.edittext.TVPasswordEditText
                     android:id="@+id/et_unlock_pwd"
                     style="@style/tv_login_edit_text_style"
                     android:layout_centerVertical="true"
                     android:digits="@string/password_rule"
-                    android:hint="@string/enter_password" />
+                    android:hint="@string/enter_password"
+                    bcaas:hint="@string/enter_password"
+                    bcaas:hintColor="@color/white30_f1f1f1"
+                    bcaas:showLine="true"
+                    bcaas:textColor="@color/white_f1f1f1"
+                    bcaas:title="@string/password" />
 
                 <Button
                     android:id="@+id/btn_unlock_wallet"
                     style="@style/tv_button_style"
                     android:layout_alignParentBottom="true"
                     android:layout_gravity="center"
+                    android:nextFocusUp="@+id/et_unlock_pwd"
                     android:layout_marginBottom="@dimen/d18"
                     android:layout_marginLeft="@dimen/d46"
                     android:layout_marginRight="@dimen/d46"
@@ -64,7 +64,6 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:gravity="center"
-                    android:nextFocusUp="@+id/et_unlock_pwd"
                     android:text="@string/unlock" />
             </RelativeLayout>
 
@@ -92,11 +91,11 @@
                         android:id="@+id/pket_create_pwd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/d20"
                         android:nextFocusDown="@+id/pket_create_confirm_pwd"
                         android:nextFocusLeft="@+id/et_unlock_pwd"
                         bcaas:hint="@string/password_rule_of_length"
                         bcaas:hintColor="@color/white30_f1f1f1"
+                        bcaas:showLine="true"
                         bcaas:textColor="@color/white_f1f1f1"
                         bcaas:title="@string/password" />
 
@@ -104,9 +103,11 @@
                         android:id="@+id/pket_create_confirm_pwd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/d16"
                         android:nextFocusLeft="@+id/btn_unlock_wallet"
                         bcaas:hint="@string/please_enter_password_again"
                         bcaas:hintColor="@color/white30_f1f1f1"
+                        bcaas:showLine="true"
                         bcaas:textColor="@color/white_f1f1f1"
                         bcaas:title="@string/confirm_password" />
                 </LinearLayout>
@@ -122,6 +123,7 @@
                         android:id="@+id/ll_create_show_wallet_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
                         android:gravity="center_vertical"
                         android:orientation="vertical">
 
@@ -132,7 +134,7 @@
 
                         <TextView
                             android:id="@+id/tv_account_address"
-                            style="@style/tv_white30_12_text_style"
+                            style="@style/tv_white_12_text_style"
                             android:lineSpacingExtra="@dimen/d3"
                             android:maxHeight="@dimen/d44"
                             android:maxLines="2" />
@@ -155,7 +157,6 @@
                             layout="@layout/tv_include_edit_text_private_key"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/d20"
                             android:layout_marginTop="@dimen/d10" />
                     </LinearLayout>
                 </ScrollView>
@@ -262,7 +263,7 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:text="@string/confirm" />
+                    android:text="@string/import_wallet" />
             </RelativeLayout>
         </LinearLayout>
 
