--- a/app/src/main/res/layout-land/tv_include_edit_text_password.xml
+++ b/app/src/main/res/layout-land/tv_include_edit_text_password.xml
@@ -15,28 +15,29 @@
             android:id="@+id/et_password"
             style="@style/tv_login_edit_text_style"
             android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/d5"
+            android:layout_toLeftOf="@+id/cb_pwd"
+            android:background="@color/transparent"
             android:digits="@string/password_rule"
             android:drawablePadding="@dimen/d10"
             android:hint="@string/enter_password"
             android:inputType="textPassword"
             android:maxLength="16"
-            android:paddingRight="@dimen/d40"
             android:singleLine="true" />
 
         <CheckBox
             android:id="@+id/cb_pwd"
-            android:layout_width="@dimen/d25"
-            android:layout_height="@dimen/d25"
+            android:layout_width="@dimen/d15"
+            android:layout_height="@dimen/d15"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@color/transparent"
-            android:button="@drawable/selector_cb_password"
+            android:button="@drawable/tv_selector_cb_password"
             android:checked="false"
             android:gravity="center" />
     </RelativeLayout>
 
     <View
         android:id="@+id/v_password_line"
-        style="@style/line_style"
-        android:layout_marginTop="@dimen/d16" />
+        style="@style/tv_line_style" />
 </LinearLayout>
