--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="white50_f1f1f1">#80F1F1F1</color>
     <color name="white70_f1f1f1">#b3F1F1F1</color>
     <color name="white30_f1f1f1">#4DF1F1F1</color>
+    <color name="white20_f1f1f1">#33F1F1F1</color>
 
 
     <color name="red">#DA261F</color>
@@ -71,7 +72,9 @@
     <!--TV-->
     <color name="tv_black_0C0B1D">#0C0B1D</color>
     <color name="tv_black_003188">#003188</color>
+    <color name="tv_black_564AC9">#564AC9</color>
     <color name="tv_black_101010">#101010</color>
+    <color name="tv_black_100D43">#100D43</color>
 
 
     <!--透明度-->
