--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -416,7 +416,7 @@
     <style name="tv_login_edit_text_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/white_f1f1f1</item>
+        <item name="android:textColor">@color/white70_f1f1f1</item>
         <item name="android:textColorHint">@color/white30_f1f1f1</item>
         <item name="android:cursorVisible">true</item>
         <item name="android:focusable">true</item>
@@ -496,6 +496,12 @@
         <item name="android:textSize">@dimen/text_size_15</item>
         <item name="android:textColorHint">@color/white30_f1f1f1</item>
         <item name="android:textColor">@color/black_1d2124</item>
+    </style>
+
+    <style name="tv_line_style">
+        <item name="android:background">@color/white20_f1f1f1</item>
+        <item name="android:layout_height">@dimen/d0.5</item>
+        <item name="android:layout_width">match_parent</item>
     </style>
 
 
