--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/block_base_mainup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/tv_select"
+        android:background="@drawable/tv_selector"
         android:visibility="gone" />
 
     <RelativeLayout style="@style/tv_layout_bg">
