--- a/app/src/main/res/layout-land/tv_include_header.xml
+++ b/app/src/main/res/layout-land/tv_include_header.xml
@@ -35,8 +35,8 @@
 
     <ImageButton
         android:id="@+id/ib_right"
-        android:layout_width="@dimen/d46"
-        android:layout_height="@dimen/d46"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:background="@color/transparent"
