--- a/app/src/main/res/layout-land/tv_activity_main.xml
+++ b/app/src/main/res/layout-land/tv_activity_main.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/tv_layout_bg"
-    android:clipChildren="false"
-    android:clipToPadding="false">
+<io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/block_base_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
-    <io.bcaas.view.tv.MainUpLayout
-        android:id="@+id/block_base_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true">
+    <io.bcaas.view.tv.FlyBroadLayout
+        android:id="@+id/block_base_mainup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/tv_selector"
+        android:visibility="gone" />
 
-        <io.bcaas.view.tv.FlyBroadLayout
-            android:id="@+id/block_base_mainup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/tv_selector"
-            android:visibility="gone" />
+    <RelativeLayout
+        style="@style/tv_layout_bg"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
         <TextView
             android:id="@+id/tv_current_time"
@@ -161,6 +161,104 @@
                     android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
-    </io.bcaas.view.tv.MainUpLayout>
 
-</RelativeLayout>
+        <!--彈出登出提示框-->
+
+        <LinearLayout
+            android:id="@+id/ll_show_logout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black30_1d2124"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <RelativeLayout
+                android:layout_width="@dimen/d299"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/d20"
+                android:layout_marginRight="@dimen/d20"
+                android:layout_marginTop="@dimen/d20"
+                android:background="@drawable/bg_white">
+
+                <TextView
+                    android:id="@+id/tv_dialog_title"
+                    style="@style/black_18_text_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/d16"
+                    android:gravity="center"
+                    android:text="@string/warning" />
+
+                <TextView
+                    android:id="@+id/tv_dialog_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_dialog_title"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="@dimen/d16"
+                    android:layout_marginRight="@dimen/d16"
+                    android:layout_marginTop="@dimen/d5"
+                    android:gravity="center"
+                    android:lineSpacingExtra="@dimen/d3"
+                    android:textColor="@color/black_1d2124"
+                    android:textSize="@dimen/text_size_14" />
+
+                <View
+                    android:id="@+id/line"
+                    style="@style/line_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/d1"
+                    android:layout_below="@+id/tv_dialog_content"
+                    android:layout_marginTop="@dimen/d16" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/d48"
+                    android:layout_below="@+id/line"
+                    android:gravity="bottom"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btn_dialog_left"
+                        android:layout_width="@dimen/d0"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:gravity="center"
+                        android:text="@string/confirm"
+                        android:textAllCaps="false"
+                        android:textColor="@color/black50_1d2124"
+                        android:textSize="@dimen/text_size_16" />
+
+                    <View
+                        style="@style/line_style"
+                        android:layout_width="@dimen/d1"
+                        android:layout_height="match_parent" />
+
+                    <Button
+                        android:id="@+id/btn_dialog_right"
+                        android:layout_width="@dimen/d0"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:gravity="center"
+                        android:text="@string/cancel"
+                        android:textAllCaps="false"
+                        android:textColor="@color/black50_1d2124"
+                        android:textSize="@dimen/text_size_16" />
+                </LinearLayout>
+            </RelativeLayout>
+        </LinearLayout>
+    </RelativeLayout>
+</io.bcaas.view.tv.MainUpLayout>
+
