--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -389,7 +389,12 @@
         <item name="android:textColor">@color/white30_f1f1f1</item>
         <item name="android:textSize">@dimen/text_size_12</item>
     </style>
-
+    <style name="tv_white30_14_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white30_f1f1f1</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
     <style name="tv_white50_12_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
